# telegram-repair-bot

./: .env_render  .gitignore  .replit  .workflow_start_application_command  .workflow_telegram_bot_command  DEPLOY_INSTRUCTIONS.md  DEPLOY_README.md  ERROR_HANDLING_README.md  README.md  README_RENDER.md  RENDER_SETUP.md  activity_log_functions.py  add_admin.py  admin_notifications.py  ai_assistant.py  ai_commands.py  app.py  bot.py  bot_diagnostic_no_server.py  bot_diagnostics.py  bot_fixed.py  bot_fixed2.py  bot_fixed3.py  bot_fixed4.py  bot_no_server.py  bot_on_port_5001.py  bot_only.py  bot_runner.py  bot_starter.py  cache.py  check_env.py  config.py  database.py  debug_log.md  deploy.py  deploy_bot.py  deploy_requirements.txt  env.py  fix_attribute_access.py  fix_bot_errors.py  (+46 more)
attached_assets/: Pasted--Build-successful-Deploying-Running-python-main-telegram-bot-py-2025-05-10-21--1746911358474.txt  Pasted--Build-successful-Deploying-Running-python-render-app-py-2025-05-10-20-31-57-7-1746909206251.txt  Pasted--Running-python-main-py-2025-05-10-11-54-48-884-main-INFO-AI-2025-1746878141790.txt  Pasted--Running-python-main-py-2025-05-10-16-18-52-459-INFO-service-shared-state--1746894105326.txt  Pasted--Running-python-render-app-py-2025-05-10-20-17-07-947-INFO-service-database-P-1746908264989.txt  Pasted--Running-python-render-app-py-2025-05-10-20-17-07-947-INFO-service-database-P-1746908362150.txt  Pasted--Running-python-working-bot-py-2025-05-11-01-12-27-541-main-INFO--1746926003940.txt  (+2 more)
docs/: README.md
templates/: 404.html  500.html  base.html  index.html  temp.html
(+1 files in other folders)
